<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="item1">Look at my GUI</string>
    <string name="item2">CLICK HERE</string>
    <string name="item3">Check this out!</string>
    <string name="item5">Switch on/off</string>
    <string name="item6">Type Here!</string>
    <string name="item7">Enter your email address:</string>
    <string name="item8">Type email here</string>
    <string name="item9">Type your password:</string>
    <string name="item10">Your profile</string>
    <string name="item11">Your name:</string>
    <string name="item12">Enter your name</string>
    <string name="item13">Your email:</string>
    <string name="item14">Enter your email</string>
    <string name="item15">Your picture:</string>
    <string name="item16">Click the button to take a picture</string>
    <string name="item17">Login</string>
    <string name="item18">Go to chat</string>
    <string name="item19">SEND</string>
    <string name="item20">RECEIVE</string>
    <string name="item21">Type here</string>
    <string name="item22">Weather Forecast</string>
    <string name="item23">Go to Toolbar page</string>
    <string name="choice1">Choice1</string>
    <string name="choice2">Choice2</string>
    <string name="choice3">Choice3</string>
    <string name="item24">Type here</string>
    <string name="undo_string">GO BACK</string>

</resources>
