<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item10" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item11" />


    <EditText

        android:id="@+id/userInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item12" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item13" />


    <EditText
        android:id="@+id/userInput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item14" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item15" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item16" />


    <Button
        android:id="@+id/chatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item18" />


</LinearLayout>