<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="30dp"
        android:text="@string/item1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:text="@string/item2" />

    <CheckBox
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@id/button1"
        android:layout_toEndOf="@id/button2"
        android:text="@string/item3" />


    <ImageButton android:id="@+id/button4"
        android:src="@drawable/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:contentDescription="TODO" />

    <Switch android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_toEndOf="@id/button4"
        android:layout_below="@id/button3"
        android:text="@string/item5" />


    <EditText
        android:id="@+id/inputtext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/button4"
        android:hint="@string/item6"
        android:inputType="textPersonName" />
</RelativeLayout>